<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>CalendarControl</class>
 <widget class="QWidget" name="CalendarControl">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>383</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <property name="topMargin">
    <number>12</number>
   </property>
   <item>
    <widget class="QWidget" name="projectTitleWidget" native="true">
     <property name="minimumSize">
      <size>
       <width>0</width>
       <height>0</height>
      </size>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout_3">
      <property name="spacing">
       <number>15</number>
      </property>
      <property name="leftMargin">
       <number>10</number>
      </property>
      <property name="topMargin">
       <number>0</number>
      </property>
      <property name="rightMargin">
       <number>14</number>
      </property>
      <property name="bottomMargin">
       <number>0</number>
      </property>
      <item>
       <widget class="QToolButton" name="projectIconBtn">
        <property name="text">
         <string/>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="projectLabel">
        <property name="text">
         <string>项目名</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer name="horizontalSpacer_3">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>243</width>
          <height>20</height>
         </size>
        </property>
       </spacer>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QWidget" name="recordWidget" native="true">
     <property name="minimumSize">
      <size>
       <width>0</width>
       <height>30</height>
      </size>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout_4">
      <property name="spacing">
       <number>40</number>
      </property>
      <property name="leftMargin">
       <number>0</number>
      </property>
      <property name="topMargin">
       <number>0</number>
      </property>
      <property name="rightMargin">
       <number>0</number>
      </property>
      <property name="bottomMargin">
       <number>12</number>
      </property>
      <item>
       <widget class="RecordItem" name="widget" native="true"/>
      </item>
      <item>
       <widget class="RecordItem" name="widget_3" native="true"/>
      </item>
      <item>
       <widget class="RecordItem" name="widget_2" native="true"/>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="Line" name="centerLine">
     <property name="enabled">
      <bool>true</bool>
     </property>
     <property name="sizePolicy">
      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="lineWidth">
      <number>1</number>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QWidget" name="titleBarWidget" native="true">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <property name="leftMargin">
       <number>14</number>
      </property>
      <property name="topMargin">
       <number>12</number>
      </property>
      <property name="rightMargin">
       <number>14</number>
      </property>
      <item>
       <widget class="QToolButton" name="arrowLeftBtn">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
       <widget class="QLabel" name="datetimeLabel">
        <property name="text">
         <string>2023年xx月</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer name="horizontalSpacer_2">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
       <widget class="QToolButton" name="arrowRightBtn">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QWidget" name="weekDayWidget" native="true">
     <property name="minimumSize">
      <size>
       <width>0</width>
       <height>0</height>
      </size>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <property name="leftMargin">
       <number>5</number>
      </property>
      <property name="topMargin">
       <number>0</number>
      </property>
      <property name="rightMargin">
       <number>5</number>
      </property>
      <property name="bottomMargin">
       <number>0</number>
      </property>
      <item>
       <widget class="QLabel" name="weeklabel_1">
        <property name="text">
         <string>一</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="weeklabel_2">
        <property name="text">
         <string>二</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="weeklabel_3">
        <property name="text">
         <string>三</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="weeklabel_4">
        <property name="text">
         <string>四</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="weeklabel_5">
        <property name="text">
         <string>五</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="weeklabel_6">
        <property name="text">
         <string>六</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="weeklabel_7">
        <property name="text">
         <string>日</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QWidget" name="mainGridWidget" native="true">
     <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0,0,0,0">
      <property name="leftMargin">
       <number>5</number>
      </property>
      <property name="topMargin">
       <number>0</number>
      </property>
      <property name="rightMargin">
       <number>5</number>
      </property>
      <property name="bottomMargin">
       <number>0</number>
      </property>
      <item row="2" column="6">
       <widget class="monthButton" name="toolButton_21">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="1" column="4">
       <widget class="monthButton" name="toolButton_12">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="2" column="4">
       <widget class="monthButton" name="toolButton_19">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="1" column="6">
       <widget class="monthButton" name="toolButton_14">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="5" column="6">
       <widget class="monthButton" name="toolButton_42">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="3" column="6">
       <widget class="monthButton" name="toolButton_28">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="3" column="1">
       <widget class="monthButton" name="toolButton_23">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="5" column="3">
       <widget class="monthButton" name="toolButton_39">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="4" column="2">
       <widget class="monthButton" name="toolButton_31">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="3" column="2">
       <widget class="monthButton" name="toolButton_24">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
       <widget class="monthButton" name="toolButton_9">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="0" column="5">
       <widget class="monthButton" name="toolButton_6">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <widget class="monthButton" name="toolButton_2">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="2" column="1">
       <widget class="monthButton" name="toolButton_16">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="5" column="1">
       <widget class="monthButton" name="toolButton_37">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="3" column="5">
       <widget class="monthButton" name="toolButton_27">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="4" column="5">
       <widget class="monthButton" name="toolButton_34">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="2" column="3">
       <widget class="monthButton" name="toolButton_18">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="1" column="3">
       <widget class="monthButton" name="toolButton_11">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="2" column="5">
       <widget class="monthButton" name="toolButton_20">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="0" column="4">
       <widget class="monthButton" name="toolButton_5">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="1" column="2">
       <widget class="monthButton" name="toolButton_10">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="4" column="4">
       <widget class="monthButton" name="toolButton_33">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="0" column="2">
       <widget class="monthButton" name="toolButton_3">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="3" column="4">
       <widget class="monthButton" name="toolButton_26">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="3" column="3">
       <widget class="monthButton" name="toolButton_25">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="1" column="5">
       <widget class="monthButton" name="toolButton_13">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="0" column="6">
       <widget class="monthButton" name="toolButton_7">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="5" column="2">
       <widget class="monthButton" name="toolButton_38">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="1" column="0">
       <widget class="monthButton" name="toolButton_8">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="4" column="3">
       <widget class="monthButton" name="toolButton_32">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="2" column="2">
       <widget class="monthButton" name="toolButton_17">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="4" column="1">
       <widget class="monthButton" name="toolButton_30">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="4" column="6">
       <widget class="monthButton" name="toolButton_35">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="0" column="0">
       <widget class="monthButton" name="toolButton_1">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="0" column="3">
       <widget class="monthButton" name="toolButton_4">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="3" column="0">
       <widget class="monthButton" name="toolButton_22">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="5" column="5">
       <widget class="monthButton" name="toolButton_41">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="4" column="0">
       <widget class="monthButton" name="toolButton_29">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="5" column="0">
       <widget class="monthButton" name="toolButton_36">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="2" column="0">
       <widget class="monthButton" name="toolButton_15">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
      <item row="5" column="4">
       <widget class="monthButton" name="toolButton_40">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>40</height>
      </size>
     </property>
    </spacer>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>monthButton</class>
   <extends>QToolButton</extends>
   <header>monthbutton.h</header>
  </customwidget>
  <customwidget>
   <class>RecordItem</class>
   <extends>QWidget</extends>
   <header location="global">recorditem.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
